# vljepa-research

./: .env.example  .gitignore  Dockerfile.demo  Dockerfile.e2e  Dockerfile.notebook  Dockerfile.salt  Dockerfile.test  Dockerfile.train  Dockerfile.webdata  Makefile  README.md  SALT_RESULTS.txt  pyproject.toml
configs/ijepa/: cifar10_a100.yaml  pretrain_tiny.yaml  pretrain_vitb16.yaml
configs/robotics/: ac_vjepa_sim.yaml
configs/salt/: salt_vitl_imagenet.yaml  stage1_tiny.yaml  stage2_tiny.yaml
configs/vjepa/: pretrain_tiny.yaml
configs/vljepa/: pretrain.yaml  pretrain_tiny.yaml  sft.yaml
deployments/api/: server.py
deployments/docker/: Dockerfile.inference  Dockerfile.train
deployments/edge/: onnx_export.py
docs/: index.html  manufacturing.html  services.html
docs/css/: style.css
docs/data/: cifar10-samples.json  training-data.json
docs/js/: app.js  camera-demo.js  onnx-demo.js  pyodide-console.js  roi-calculator.js  training-charts.js
docs/papers/: vljepa-2025.md
documentation/: licensing-analysis.md
documentation/architecture/: jepa-family-overview.md  vl-jepa-deep-dive.md
documentation/hardware-planning/: gpu-cost-analysis.md
documentation/papers/: ijepa-cvpr2023.md  lecun-2022-path-autonomous.md  (+1 more)
notebooks/: 01_ijepa_walkthrough.ipynb  03_vljepa_inference_demo.ipynb
scripts/: demo_inference.py  download_checkpoints.sh  download_datasets.sh  e2e_smoke_test.py  export_onnx.py  generate_onnx_and_embeddings.py  generate_web_data.py  run_cloud_training.sh  salt_e2e_smoke_test.py  setup_env.sh
tests/: conftest.py  test_ac_predictor.py  test_checkpoint_loading.py  test_config_loading.py  test_distributed.py  test_ijepa_model.py  test_infonce_loss.py  test_integration.py  test_rope.py  test_salt.py  test_training_utils.py  test_vljepa_model.py
(+32 files in other folders)
